--- a/index.html
+++ b/index.html
@@ -11,21 +11,17 @@
 </head>
 <body>
 
-  <img src="" alt="">
-  <h1>Klyfithon Paulo</h1>
-  <p>Natal, Brazil</p>
-  <br>
-  <p>"Front-end developer and avid gamer."</p>
+  <div class="container">
+    <img class="profile" src="assets/images/avatar-jessica.jpeg" alt="">
+    <h1>Jessica Randall</h1>
+    <p class="localization">London, United Kingdom</p>
+    <p>"Front-end developer and avid reader."</p>
 
-  <a href="">GitHub</a>
-  <a href="">Frontend Mentor</a>
-  <a href="">LinkedIn</a>
-  <a href="">Twitter</a>
-  <a href="">Instagram</a>
-  
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    <button>GitHub</button>
+    <button>Frontend Mentor</button>
+    <button>LinkedIn</button>
+    <button>Twitter</button>
+    <button>Instagram</button>
+  </div>
 </body>
 </html>
